force-app/main/default/objects/ItemsforEDF__mdt/ItemsforEDF__mdt.object-meta.xml
<CustomObject>
    <label>ItemsforEDF</label>
    <pluralLabel>ItemsforEDFs</pluralLabel>
</CustomObject>