force-app/main/default/objects/ItemsforEDF__mdt/fields/Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_Label__c</fullName>
    <label>Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>