force-app/main/default/objects/ItemsforEDF__mdt/fields/Button_URL__c.field-meta.xml
<CustomField>
    <fullName>Button_URL__c</fullName>
    <label>Button URL</label>
    <type>Url</type>
</CustomField>