force-app/main/default/objects/ItemsforEDF__mdt/fields/Header_Icon__c.field-meta.xml
<CustomField>
    <fullName>Header_Icon__c</fullName>
    <label>Header Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>utility:play</fullName>
                <default>true</default>
                <label>utility:play</label>
            </value>
            <value>
                <fullName>utility:note</fullName>
            </value>
            <value>
                <fullName>utility:world</fullName>
            </value>
            <value>
                <fullName>utility:date_input</fullName>
            </value>
            <value>
                <fullName>utility:image</fullName>
            </value>
            <value>
                <fullName>utility:info</fullName>
            </value>
            <value>
                <fullName>utility:close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>