force-app/main/default/objects/ItemsforEDF__mdt/fields/IsContactField__c.field-meta.xml
<CustomField>
    <fullName>IsContactField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsContactField</label>
    <type>Checkbox</type>
</CustomField>