force-app/main/default/objects/ItemsforEDF__mdt/listViews/China_Deliverables.listView-meta.xml
<ListView>
    <fullName>China_Deliverables</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Fellowship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fellowship__c</field>
        <operation>equals</operation>
        <value>China Fellowship</value>
    </filters>
    <label>China Deliverables</label>
    <language>en_US</language>
</ListView>