force-app/main/default/objects/ItemsforEDF__mdt/listViews/Deliverables.listView-meta.xml
<ListView>
    <fullName>Deliverables</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Tile_Body__c</columns>
    <columns>Button_Label__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Button_URL__c</columns>
    <columns>Mapping_Field__c</columns>
    <columns>IsContactField__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Deliverables</label>
    <language>en_US</language>
</ListView>