force-app/main/default/objects/ItemsforEDF__mdt/listViews/India_Deliverables.listView-meta.xml
<ListView>
    <fullName>India_Deliverables</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Fellowship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fellowship__c</field>
        <operation>equals</operation>
        <value>India Fellowship</value>
    </filters>
    <label>India Deliverables</label>
    <language>en_US</language>
</ListView>