force-app/main/default/objects/ItemsforEDF__mdt/listViews/USA_Delivrables.listView-meta.xml
<ListView>
    <fullName>USA_Delivrables</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Fellowship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fellowship__c</field>
        <operation>equals</operation>
        <value>U.S. Fellowship</value>
    </filters>
    <label>USA Delivrables</label>
    <language>en_US</language>
</ListView>